feat(CheckIn): Add Student Check In API